# pflm

./: .buildinfo  .coveragerc  .dockerignore  .gitattributes  .gitignore  Dockerfile.dev  LICENSE  Makefile  README.rst  genindex.html  index.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tmp_test_output.txt
.doctrees/: index.doctree
.doctrees/examples/: elastic_net.doctree  fpca_advanced.doctree  fpca_basic.doctree  index.doctree  interpolation_1d.doctree  interpolation_2d.doctree  pflm_basic.doctree  smoothing_1d.doctree  smoothing_2d.doctree
.doctrees/reference/: index.doctree
.doctrees/user_guide/: benchmark.doctree  cython_api.doctree  index.doctree  installation.doctree  quickstart.doctree  structure.doctree
.github/workflows/: _build-linux.yml  _build-wheels.yml  _build-windows-conda.yml  _test-ubuntu.yml  _test-windows-conda.yml  _test.yml  publish-to-pypi.yml  publish_doc.yaml  publish_doc.yml  python-package.yml
_modules/: index.html
_modules/pflm/fpca/: fpca_result_class.html  functional_data_generator.html  functional_pca.html
_modules/pflm/fpca/utils/: covariance_utils.html  fpca_base_func_utils.html  fpca_score_utils.html
_modules/pflm/interp/: interp_model.html
_modules/pflm/smooth/: kernel.html  polyfit_model_1d.html  polyfit_model_2d.html
_modules/pflm/utils/: utility.html
_sources/examples/: elastic_net.rst.txt  fpca_advanced.rst.txt  fpca_basic.rst.txt  index.rst.txt  interpolation_1d.rst.txt  interpolation_2d.rst.txt  pflm_basic.rst.txt  smoothing_1d.rst.txt  smoothing_2d.rst.txt
_sources/reference/: index.rst.txt
_sources/user_guide/: cython_api.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  structure.rst.txt
benchmarks/: README.rst  bench_elastic_net.py  bench_fpca_score.R  bench_fpca_score.py  bench_polyfit1d.R  bench_polyfit1d.py  bench_polyfit2d.R  bench_polyfit2d.py
doc/source/: conf.py  index.rst
doc/source/_templates/: class-template.rst  module-template.rst
doc/source/examples/: elastic_net.rst  fpca_basic.rst  index.rst  interpolation_1d.rst  interpolation_2d.rst  pflm_basic.rst  smoothing_1d.rst  smoothing_2d.rst
doc/source/user_guide/: benchmark.rst  c_api.rst  cython_api.rst  index.rst  installation.rst  quickstart.rst  structure.rst
examples/: elastic_net.html  fpca_advanced.html  fpca_basic.html  index.html  interpolation_1d.html  interpolation_2d.html  pflm_basic.html  smoothing_1d.html  smoothing_2d.html
pflm/: __init__.py  functional_data_generator.py  functional_pca.py  meson.build
pflm/_build_utils/: __init__.py  tempita.py  version.py
pflm/fpca/: __init__.py  covariance_utils.py  fpca_result_class.py  fpca_score_utils.py  functional_data_generator.py  functional_pca.py  meson.build
pflm/fpca/tests/: conftest.py  test_covariance.py  test_fpca_func_utils.py  test_fpca_score_utils.py  test_functional_data_generator.py  test_functional_pca.py  test_functional_pca_params.py  test_measure_error_var.py  test_rotate_polyfit2d.py
pflm/fpca/utils/: __init__.py  _raw_cov.pyx  _rotate_polyfit2d.pyx  covariance_utils.py  fpca_base_func_utils.py  fpca_score.pyx  fpca_score_utils.py  log_lik.pyx  meson.build  raw_cov.pyx  rotate_polyfit2d.pyx
pflm/fpca/utils/tests/: conftest.py  test_covariance.py  test_fpca_base_func_utils.py  test_fpca_score_utils.py  test_measure_error_var.py  test_rotate_polyfit2d.py
pflm/interp/: __init__.py  _interp.pxd  _interp.pyx  interp.pxd  interp.py  interp.pyx  interp_model.py  meson.build
pflm/interp/src/: interp.cpp  interp.h  interp_helper.cpp  interp_helper.h
pflm/interp/tests/: test_interp1d.py  test_interp2d.py  test_interp_find_le_indices.py  test_search.py
pflm/pflm/: __init__.py  partial_flm.py
pflm/pflm/tests/: test_partial_flm.py
pflm/pflm/utils/: __init__.py  elastic_net_solver.pyx  linear_model.py  meson.build
pflm/pflm/utils/tests/: test_linear_model.py
pflm/smooth/: __init__.py  _polyfit.pxd  _polyfit.pyx  cov_smooth.py  kernel.py  meson.build  polyfit.pxd  polyfit.py  polyfit.pyx  polyfit_model.py  polyfit_model_1d.py  polyfit_model_2d.py
pflm/smooth/src/: polyfit_helper.cpp  polyfit_helper.h
pflm/smooth/tests/: test_helper_functions.py  test_kernel.py  test_polyfit1d.py  test_polyfit2d.py
pflm/tests/: test_functional_data_generator.py  test_module_loading.py  test_pflm.py
pflm/utils/: __init__.py  _fpca_score.pyx  _lapack_helper.pxd  _lapack_helper.pyx  _log_lik.pyx  _raw_cov.pyx  _rotate_polyfit2d.pyx  _smooth_covariance.pyx  _trapz.pxd  _trapz.pyx  blas_helper.pxd  blas_helper.pyx  covariance_utils.py  fpca_base_func_utils.py  fpca_helpers.py  fpca_result_class.py  fpca_score_utils.py  lapack_helper.pxd  lapack_helper.pyx  meson.build  trapz.pxd  trapz.py  trapz.pyx  utility.py
pflm/utils/src/: helper.cpp  helper.h
pflm/utils/tests/: __init__.py  test_covariance.py  test_fpca_func_utils.py  test_fpca_helpers.py  test_fpca_score_utils.py  test_gels.py  test_gelss.py  test_gemm.py  test_gemv.py  test_gtsv.py  test_measure_error_var.py  test_posv.py  test_rotate_polyfit2d.py  test_score_func.py  test_syevd.py  test_sysv.py  test_trapz.py  test_utility.py
reference/: index.html
tests/: test_functional_data_generator.py  test_interp1d.py  test_interp2d.py
tools/: docker-dev-env.sh
user_guide/: benchmark.html  cython_api.html  index.html  installation.html  quickstart.html  structure.html
